--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,21 @@ language: python
 python:
     - "2.7"
 
-install: "pip install -r requirements.txt"
+services:
+    - "mysql"
 
-script: make test
+install:
+    - "pip install -r requirements.txt"
+
+before_install:
+    - "sudo apt-get update"
+    - "sudo apt-get install python-mysqldb"
+    - "sudo apt-get install python-dev"
+
+before_script:
+    - "mysql -e 'CREATE DATABASE coursedb;'" # create db
+    - "mysqladmin -u root password test" # set root password
+
+script:
+    - "python utils/database_setup.py -l sample_data/grad_req.xlsx"
+    - "python database.py" # run main
