--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,5 @@ before_script:
     - "mysqladmin -u root password test" # set root password
 
 script:
-    - "python utils/database_setup.py -l sample_data/grad_req.xlsx"
-    - "python database.py" # run main
+    - "cd utils && python database_setup.py -l sample_data/smaller_grad_req.xlsx"
+    - "cd utils && python database.py" # run main
