--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 flask
-pandas
 xlrd
-https://cdn.mysql.com/Downloads/Connector-Python/mysql-connector-python-1.0.12.tar.gz
+pandas
+mysql-connector-python
+openpyxl
