Update setup script and update README to reflect changes

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,9 @@ before_install:
 
 before_script:
     - "mysql -e 'CREATE DATABASE coursedb;'" # create db
-    - "mysqladmin -u root password test" # set root password
+    - "mysql -u root -p -e \"CREATE USER 'tetrabyte'@'localhost' IDENTIFIED BY 'test';\""
+    - "mysql -u root -p -e 'CREATE DATABASE coursedb;'"
+    - "mysql -u root -p -e \"GRANT ALL ON coursedb.* TO tetrabyte\""
 
 script:
     - "cd utils"
